"Membuat Navigasi dengan Grid"

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Sofyan Tanjung">
     <meta name="keywords" content="HTML CSS">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <!-- Header Start -->
@@ -15,38 +15,18 @@
             <div class="logo">
                 <h1>Sofyan Tanjung</h1>
             </div>
-            <ul>
+            <ul class="navigasi">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">MySkill</a></li>
                 <li><a href="#">AboutMe</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <ul class="sign">
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Daftar</a></li>
+            </ul>
         </nav>
     </header>
     <!-- Header Start -->
-    <!-- Main Hero Start -->
-     <section class="main">
-        <div class="hero">
-            <section>
-                <h2>Selamat Datang di Website Portfolio</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis recusandae accusantium ipsam, ipsum quo, nobis iusto velit, quasi illo architecto ducimus tempora. Quisquam iste perspiciatis quidem consequatur sequi libero iusto dolor. Maxime, provident odit ipsum sed vitae, vero incidunt in consectetur nisi cumque voluptas voluptatibus libero, nam enim temporibus asperiores laudantium itaque voluptate labore expedita. Praesentium cupiditate aut nobis voluptatum? Eius optio natus minima illo, porro nihil amet possimus iure.</p>
-            </section>
-            <div class="img-hero">
-                <img src="img/sofyantanjung.jpg" alt="sofyantanjung">
-            </div>
-        </div>        
-     </section>
-    <!-- Main Hero End -->
-     <!-- main Skill -->
-    <section class="skill">
-        <h2>My Skill</h2>
-        <ul>
-            <li>
-                <a href="#">
-                    <img src="img/1.png" alt="HTML" title="HTML">
-                </a>
-            </li>
-        </ul>
-    </section>
 </body>
 </html>
