--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
         </nav>
     </header>
     <!-- Header Start -->
+
+    <!-- Main Start -->
+    <main>
+        
+    </main>
+    <!-- Main End -->
 </body>
 </html>
