"membuat vidio dan gambar pada website"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Sofyan Tanjung">
     <meta name="keywords" content="HTML CSS">
-    <title>Portfolio</title>
+    <title>Solidaritas Dusanak</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,13 +13,13 @@
     <header>
         <nav>
             <div class="logo">
-                <h1>Sofyan Tanjung</h1>
+                <h1>Solidaritas</h1>
             </div>
             <ul class="navigasi">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">MySkill</a></li>
-                <li><a href="#">AboutMe</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Tentang</a></li>
+                <li><a href="#">Foto</a></li>
+                <li><a href="#">Card</a></li>
             </ul>
             <ul class="sign">
                 <li><a href="#">Login</a></li>
@@ -31,8 +31,19 @@
 
     <!-- Main Start -->
     <main>
-        
+        <section class="hero-img">
+            <img src="img/solidaritas.jpg" alt="Solidaritas foto rame" role="img">
+        </section>
+        <section class="vidio-container">
+            <video controls autoplay class="vidio-1">
+                <source src="vidio/FB_VID_1310258626955772469.mp4" type="video/mp4">
+            </video>
+            <video controls autoplay class="vidio-2">
+                <source src="vidio/FB_VID_8512345404340109245.mp4" type="video/mp4">
+            </video>
+        </section>
     </main>
     <!-- Main End -->
+
 </body>
 </html>
