"membuat gallery / foto"

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="navigasi">
                 <li><a href="#">Home</a></li>
                 <li><a href="#Tentang">Tentang</a></li>
-                <li><a href="#">Foto</a></li>
+                <li><a href="#Foto">Foto</a></li>
                 <li><a href="#">Card</a></li>
             </ul>
             <ul class="sign">
@@ -66,5 +66,21 @@
     </article>
     <!-- Article End -->
 
+    <!-- Foto -->
+    <figure id="Foto">
+    <h1>Gallery / Foto</h1>
+    <div class="gallery">
+        <img src="img/solidaritas.jpg" alt="" class="item-satu">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+        <img src="img/solidaritas.jpg" alt="">
+    </div>
+    </figure>
 </body>
 </html>
