"Merevisi / perbaiki solidaritas dusanak"

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <li><a href="#">Card</a></li>
             </ul>
             <ul class="sign">
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Daftar</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="daftar.html">Daftar</a></li>
             </ul>
         </nav>
     </header>
@@ -68,19 +68,18 @@
 
     <!-- Foto -->
     <figure id="Foto">
-    <h1>Gallery / Foto</h1>
-    <div class="gallery">
-        <img src="img/solidaritas.jpg" alt="" class="item-satu">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-        <img src="img/solidaritas.jpg" alt="">
-    </div>
+        <h1>Gallery / Foto</h1>
+        <div class="gallery">
+            <img src="img/jpg/2.jpg" alt="">
+            <img src="img/jpg/3.jpg" alt="">
+            <img src="img/jpg/4.jpg" alt="">
+            <img src="img/jpg/5.jpg" alt="">
+            <img src="img/jpg/6.jpg" alt="">
+            <img src="img/jpg/7.jpg" alt="">
+            <img src="img/jpg/8.jpg" alt="">
+            <img src="img/jpg/9.jpg" alt="">
+            <img src="img/jpg/10.jpg" alt="">
+        </div>
     </figure>
 </body>
 </html>
