--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="HTML CSS">
     <title>Solidaritas Dusanak</title>
     <link rel="stylesheet" href="css/main.css">
+    <!-- Link CDN Font-Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Header Start -->
@@ -19,7 +21,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#Tentang">Tentang</a></li>
                 <li><a href="#Foto">Foto</a></li>
-                <li><a href="#">Card</a></li>
+                <li><a href="#Card">Card</a></li>
             </ul>
             <ul class="sign">
                 <li><a href="login.html">Login</a></li>
@@ -81,5 +83,65 @@
             <img src="img/jpg/10.jpg" alt="">
         </div>
     </figure>
+
+    <!-- Card -->
+     <section class="card" id="Card">
+         <h1>Pemain Teratas / Card</h1>
+         <div class="flex-card">
+             <div class="section-card">
+                 <header>
+                     <h2>Sofyan Tanjung</h2>
+                     <img src="img/sofyantanjung.jpg" alt="">
+                 </header>
+                 <div class="content">
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-regular fa-star"></i>
+                     <p>Bintang 4 Untuk Kelincahaan</p>
+                 </div>
+                 <footer>
+                     <a href="#">Ikuti</a>
+                 </footer>
+             </div>
+             <div class="section-card card-lg">
+                 <header>
+                     <h2>Sofyan Tanjung</h2>
+                     <img src="img/sofyantanjung.jpg" alt="">
+                 </header>
+                 <div class="content">
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-regular fa-star"></i>
+                     <p>Bintang 4 Untuk Kelincahaan</p>
+                 </div>
+                 <footer>
+                     <a href="#">Ikuti</a>
+                 </footer>
+             </div>
+             <div class="section-card">
+                 <header>
+                     <h2>Sofyan Tanjung</h2>
+                     <img src="img/sofyantanjung.jpg" alt="">
+                 </header>
+                 <div class="content">
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-solid fa-star"></i>
+                     <i class="fa-regular fa-star"></i>
+                     <p>Bintang 4 Untuk Kelincahaan</p>
+                 </div>
+                 <footer>
+                     <a href="#">Ikuti</a>
+                 </footer>
+             </div>
+         </div>
+    </section>
+    
+
 </body>
 </html>
