--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="author" content="Sofyan Tanjung">
     <meta name="keywords" content="HTML CSS">
     <title>Solidaritas Dusanak</title>
+    <!-- Link SCSS -->
     <link rel="stylesheet" href="css/main.css">
     <!-- Link CDN Font-Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Link CSS murni -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header Start -->
@@ -86,7 +89,8 @@
 
     <!-- Card -->
      <section class="card" id="Card">
-         <h1>Pemain Teratas / Card</h1>
+        <h1>Card</h1>
+         <h3>Pemain Teratas</h3>
          <div class="flex-card">
              <div class="section-card">
                  <header>
@@ -140,8 +144,13 @@
                  </footer>
              </div>
          </div>
+         <a href="pemainKeseluruhan/index.html">Lihat Keseluruhan Pemain</a>
     </section>
     
+    <!-- Bundle JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <!-- Script js -->
+    <script src="script.js"></script>
 </body>
 </html>
