--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li><a href="#Tentang">Tentang</a></li>
                 <li><a href="#Foto">Foto</a></li>
                 <li><a href="#Card">Card</a></li>
+                <li><a href="#Contact">Contact</a></li>
             </ul>
             <ul class="sign">
                 <li><a href="login.html">Login</a></li>
@@ -87,7 +88,7 @@
         </div>
     </figure>
 
-    <!-- Card -->
+    <!-- Card Start -->
      <section class="card" id="Card">
         <h1>Card</h1>
          <h3>Pemain Teratas</h3>
@@ -146,6 +147,43 @@
          </div>
          <a href="pemainKeseluruhan/index.html">Lihat Keseluruhan Pemain</a>
     </section>
+    <!-- Card End -->
+
+    <!-- Contact Start -->
+     <section class="contact" id="Contact">
+        <h1>Contact</h1>
+        <form action="">
+            <label>
+                Nama
+                <input type="text" placeholder="Masukkan Nama">
+            </label>
+            <label>
+                Email
+                <input type="email" placeholder="Masukkan Email">
+            </label>
+            <label>
+                No Telepon
+                <input type="tel" placeholder="Masukkan No Telepon">
+            </label>
+            <label>
+                Pilih Role Keahlian Badminton
+                <select name="" id="">
+                    <option selected>Pilih</option>
+                    <option value="Smash">Smash</option>
+                    <option value="Netting">Netting</option>
+                    <option value="Backhand">Backhand</option>
+                    <option value="Fort Hand">Fort Hand</option>
+                </select>
+            </label>
+            <label>
+                Pesan
+                <textarea name="" id="" rows="5">
+                </textarea>
+            </label>
+            <button type="submit">Kirim!</button>
+        </form>
+     </section>
+    <!-- Contact End -->
     
     <!-- Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
