--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
         </form>
      </section>
     <!-- Contact End -->
+
+     <!-- Footer Start -->
+      <footer id="footer">
+        <p>&copy; Copyright2024 | Built with <i class="fa-solid fa-heart"></i> By : Sofyan Tanjung</p>
+        <button><a href="https://github.com/becakdarurat">Kunjungi Github</a></button>
+      </footer>
+     <!-- Footer End -->
     
     <!-- Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
